--- a/main.html
+++ b/main.html
@@ -7,7 +7,23 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div class="container">
+	<h1 id="verification_heading">Verify your Account</h1>
+	<h5 id="verification_subtext">`We emailed you the six digit code to your registered email id. Enter the code below to confirm your email address.`</h5>
+	<form id="inputs" class="code-container">
+		<input class="code" id="code-1" placeholder="0">
+		<input class="code" id="code-2" placeholder="0">
+		<input class="code" id="code-3" placeholder="0">
+		<input class="code" id="code-4" placeholder="0">
+		<input class="code" id="code-5" placeholder="0">
+		<input class="code" id="code-6" placeholder="0">
+	</form>
+		<p><a href="" style="text-decoration: none;">Click here </a>to resend the code</p>
+	</div>
+
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
