--- a/main.html
+++ b/main.html
@@ -1,32 +1,25 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 	<div class="container">
-	<h1 id="verification_heading">Verify your Account</h1>
-	<h5 id="verification_subtext">`We emailed you the six digit code to your registered email id. Enter the code below to confirm your email address.`</h5>
-	<form id="inputs" class="code-container">
-		<input class="code" id="code-1" placeholder="0">
-		<input class="code" id="code-2" placeholder="0">
-		<input class="code" id="code-3" placeholder="0">
-		<input class="code" id="code-4" placeholder="0">
-		<input class="code" id="code-5" placeholder="0">
-		<input class="code" id="code-6" placeholder="0">
-	</form>
+		<h1 id="verification_heading">Verify Your Account</h1>
+		<h5 id="verification_subtext">We emailed you the six digit code in your registered email address. Please enter the code below to confirm your email address.</h5>
+		<form id="inputs" class="code-container">
+			<input class="code" id="code-1" placeholder="0">
+			<input class="code" id="code-2" placeholder="0">
+			<input class="code" id="code-3" placeholder="0">
+			<input class="code" id="code-4" placeholder="0">
+			<input class="code" id="code-5" placeholder="0">
+			<input class="code" id="code-6" placeholder="0">
+		</form>
 		<p><a href="" style="text-decoration: none;">Click here </a>to resend the code</p>
 	</div>
-
-
-
-	
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
